update on public contacts

--- a/public/contacts/index.html
+++ b/public/contacts/index.html
@@ -63,8 +63,11 @@
     
 
     <div class="article-content">
-      <h1 id="i-miei-contatti">I miei contatti</h1>
+      <p>Ciao sono Valentina Aceto e sono un ingegnere civile ed ambientale.</p>
+<p>Ho studiato ingegneria all&rsquo;UNICAL e mi occupo di progettazione ingegneristica ed acustica.<br>
+Vivo a Rende con mio marito ed Alice.</p>
 <p>Per info e collaborazioni <a href="mailto:ing.valentinaceto@gmail.com">scrivimi!</a></p>
+<p>Questo sito è costruito con blogdown and Hugo, ed è stato pubblicato utilizzando Netlify.</p>
 
     </div>
   </article>
