update on contacts

--- a/public/contacts/index.html
+++ b/public/contacts/index.html
@@ -63,11 +63,11 @@
     
 
     <div class="article-content">
-      <p>Ciao sono Valentina Aceto e sono un ingegnere civile ed ambientale.</p>
-<p>Ho studiato ingegneria all&rsquo;UNICAL e mi occupo di progettazione ingegneristica ed acustica.<br>
-Vivo a Rende con mio marito ed Alice.</p>
-<p>Per info e collaborazioni <a href="mailto:ing.valentinaceto@gmail.com">scrivimi!</a></p>
-<p>Questo sito è costruito con blogdown and Hugo, ed è stato pubblicato utilizzando Netlify.</p>
+      <p>Mail <a href="mailto:ing.valentinaaceto@gmail.com">ing.valentinaaceto@gmail.com</a><br>
+PEC <a href="mailto:valentina.aceto@ingpec.eu">valentina.aceto@ingpec.eu</a></p>
+<p>Mobile +39 3401400199</p>
+<p>P.IVA 03319340786<br>
+Sede operativa Via Quasimodo 4 – Rende 87036 (CS)</p>
 
     </div>
   </article>
