--- a/public/about/index.html
+++ b/public/about/index.html
@@ -63,9 +63,21 @@
     
 
     <div class="article-content">
-      <h1 id="le-competenze">Le competenze</h1>
-<h1 id="le-soluzioni">Le soluzioni</h1>
-<h1 id="le-persone">Le persone</h1>
+      <p>Mi occupo prevalentemente di lavori pubblici come supporto al RUP, di consulenze ad imprese per la redazione di gare d’appalto con offerta economicamente più vantaggiosa, redazione di piani di protezione civile e di analisi di condizione limite di emergenza (CLE).</p>
+<h1 id="le-competenze">Le competenze</h1>
+<p>Laureata in Ingegneria per l’Ambiente e il Territorio, indirizzo Difesa del suolo, e specializzata in consulenze ambientali verifica e progettazione di opere di sistemazione di versanti per la mitigazione del rischio idrogeologico, bonifica di siti contaminati e progettazione discariche, opere edili, geotecniche e reti idriche e fognarie con relativi impianti.</p>
+<p>Dal 2016 sono un Tecnico Competente in Acustica con esperienza in monitoraggi, misure fonometriche, redazione di studio d’impatto acustico e calcoli previsionali e redazione di Piani di Zonizzazione Acustica.</p>
+<p>Dal 2017 sono un Esperto Protocollo ITACA Avanzato per la Regione Calabria e in fase di iscrizione presso l’Elenco dei professionisti Esperti della UNI/PdR 13:2019.</p>
+<h1 id="incarichi">Incarichi</h1>
+<p>Nel 2018 ho vinto il concorso pubblico in ARPA Dipartimento di Crotone come Ingegnere Esperto in Bonifica dei siti contaminati occupandosi del sito SIN Crotone-Cassano Ionio – Cerchiara di Calabria.</p>
+<p>Nel 2019 sono stata Responsabile del Servizio di Prevenzione e Protezione (Sicurezza con n. 700 dipendenti) presso ARSAC – Azienda Regionale per lo Sviluppo dell’Agricoltura ai sensi del D.Lgs 81/2008.</p>
+<p>Tra i servizi affini svolti nella categoria S04 ho realizzato progetti per oltre 1 milione di euro di lavori.</p>
+<h1 id="abilitazioni">Abilitazioni</h1>
+<p>Dal 2013 sono abilitata ai sensi del D.Lgs 81/2008 come coordinatore della sicurezza in fase di progettazione e di esecuzione.</p>
+<p>Dal 2014 sono iscritta all’Ordine degli Ingegneri della Provincia di Cosenza, settore civile ambientale, sez. A.</p>
+<p>Dal 2018 sono iscritta presso l’ENTECA – Elenco Nazionale Tecnici Competenti in Acustica.</p>
+<h1 id="collaborazioni">Collaborazioni</h1>
+<p>Collaborazione da molti anni con una software house leader nel settore geotecnico.</p>
 
     </div>
   </article>
