--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -63,7 +63,8 @@
     
 
     <div class="article-content">
-      <h1 id="alcuni-progetti">Alcuni progetti</h1>
+      <h1 id="heading"></h1>
+<p>coming soon</p>
 
     </div>
   </article>
